# fftw-feedstock

./: .travis.yml  appveyor.yml  conda-forge.yml
ci_support/: run_docker_build.sh
recipe/: bld.bat  meta.yaml  replace.py
recipe/cmake/: CMakeLists.txt
